--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "webpack-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "My first WebPack app... Not fun!",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "server": "webpack serve"
   },
   "keywords": [],
   "author": "Jean-Baptiste VIDAL",
@@ -15,11 +16,14 @@
     "@babel/preset-env": "^7.17.10",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^6.2.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
